# frame

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_VISUAL_FIXTURES.md  Cargo.toml  README.md  SECURITY.md  deny.toml  eslint.config.js  package.json  svelte.config.js
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  i18n-guardrails.yml  publish.yml  publish_nixpkgs.yml  release.yml  run_bundling.yml  test-build.yml
frame-app/: Cargo.toml  README.md  build.rs
frame-app/resources/: frame.desktop.in
frame-app/resources/app-icons/: icon.icns
frame-app/src/: app_info.rs  app_persistence.rs  capabilities.rs  conversion_events.rs  file_filters.rs  gstreamer_runtime.rs  lib.rs  main.rs  native_dialogs.rs  notifications.rs  numeric.rs  runtime_binaries.rs  runtime_environment.rs  source_metadata.rs  theme.rs  update_runtime.rs  update_session.rs
frame-app/src/app/: accessibility.rs  chrome.rs  conversion.rs  file_list_panel.rs  files.rs  fixtures.rs  logs_panel.rs  logs_state.rs  metadata.rs  mod.rs  motion.rs  preview_actions.rs  primitives.rs  render.rs  runtime.rs  settings_actions.rs  state.rs  tests.rs  update_actions.rs  update_session.rs  workspace.rs
frame-app/src/assets/: mod.rs  tests.rs
frame-app/src/conversion_runner/: config.rs  controller.rs  mod.rs  output_paths.rs  runner.rs  tests.rs
frame-app/src/file_queue/: format.rs  item.rs  queue.rs  status.rs  tests.rs
frame-app/src/preview/: crop.rs  media.rs  overlay.rs  tests.rs  timeline.rs
frame-app/src/preview_engine/: error.rs  ffmpeg_backend.rs  frame_store.rs  gstreamer_backend.rs  image_loader.rs  metrics.rs  mod.rs  renderer.rs  session.rs  tests.rs  types.rs
frame-app/src/settings/: filter_updates.rs  mod.rs  model.rs  options.rs  rules.rs  source_info.rs  tabs.rs  tests.rs  updates.rs
frame-core/: Cargo.toml
frame-core/src/: args.rs  capabilities.rs  codec.rs  events.rs  filters.rs  lib.rs  media_filters.rs  media_rules.rs  preview.rs  probe.rs  types.rs  utils.rs
frame-core/tests/: README.md  media_integration.rs
frame-updater/: Cargo.toml
frame-updater/src/: client.rs  helper.rs  install.rs  manifest.rs  platform.rs  security.rs
gpui-ce/: Cargo.toml  README.md
gpui-ce/src/: assets.rs  conversion_runner.rs  file_filters.rs  file_queue.rs  lib.rs  main.rs  settings.rs  source_metadata.rs  theme.rs
gpui-ce/src/app/: chrome.rs  file_list_panel.rs  files.rs  fixtures.rs  logs_panel.rs  mod.rs  preview_actions.rs  primitives.rs  render.rs  settings_actions.rs  state.rs  tests.rs
gpui-ce/src/assets/: mod.rs  tests.rs
gpui-ce/src/conversion_runner/: config.rs  runner.rs  (+1 more)
inno/: frame.iss
packaging/flathub/: README.md  io.github._66HEX.Frame.desktop  io.github._66HEX.Frame.metainfo.xml  io.github._66HEX.Frame.metainfo.xml.in  io.github._66HEX.Frame.yml.in
packaging/flatpak/: io.github._66HEX.Frame.Devel.yml.in
readme/: de-DE.md  es-ES.md  fr-FR.md  it-IT.md  ja-JP.md  ko-KR.md  ru-RU.md  zh-CN.md
script/: bundle-linux  bundle-mac  bundle-windows.ps1
scripts/: bundle-linux  bundle-windows.cjs  i18n-check.mjs  i18n-common.mjs  i18n-extract.mjs  i18n-sync.mjs  i18n-translate.mjs  setup-ffmpeg.cjs  setup-windows.ps1
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capabilities.rs  conversion.rs  dialog.rs  fonts.rs  lib.rs  main.rs
src/lib/: types.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
tooling/manifest-signer/: Cargo.toml
tooling/xtask/: Cargo.toml
tooling/xtask/src/: main.rs
(+151 files in other folders)
