[workspace]
resolver = "2"
members = [
    "frame-app",
    "frame-core",
    "frame-updater",
    "tooling/xtask",
]
exclude = ["vendor/gpui-ce"]

[patch."https://github.com/gpui-ce/gpui-ce"]
gpui = { path = "vendor/gpui-ce/crates/gpui" }
gpui_linux = { path = "vendor/gpui-ce/crates/gpui_linux" }
gpui_macos = { path = "vendor/gpui-ce/crates/gpui_macos" }
gpui_macros = { path = "vendor/gpui-ce/crates/gpui_macros" }
gpui_platform = { path = "vendor/gpui-ce/crates/gpui_platform" }
gpui_shared_string = { path = "vendor/gpui-ce/crates/gpui_shared_string" }
gpui_web = { path = "vendor/gpui-ce/crates/gpui_web" }
gpui_wgpu = { path = "vendor/gpui-ce/crates/gpui_wgpu" }
gpui_windows = { path = "vendor/gpui-ce/crates/gpui_windows" }
