[workspace]
resolver = "2"
members = [
    "frame-app",
    "frame-core",
    "frame-updater",
    "tooling/xtask",
]
exclude = ["vendor/gpui-ce"]

[workspace.lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = 10 }
redundant_clone = { level = "deny", priority = 9 }
clone_on_copy = { level = "deny", priority = 9 }
needless_collect = { level = "deny", priority = 8 }
pedantic = { level = "warn", priority = 3 }
nursery = { level = "warn", priority = 3 }

[patch."https://github.com/gpui-ce/gpui-ce"]
gpui = { path = "vendor/gpui-ce/crates/gpui" }
gpui_linux = { path = "vendor/gpui-ce/crates/gpui_linux" }
gpui_macos = { path = "vendor/gpui-ce/crates/gpui_macos" }
gpui_macros = { path = "vendor/gpui-ce/crates/gpui_macros" }
gpui_platform = { path = "vendor/gpui-ce/crates/gpui_platform" }
gpui_shared_string = { path = "vendor/gpui-ce/crates/gpui_shared_string" }
gpui_web = { path = "vendor/gpui-ce/crates/gpui_web" }
gpui_wgpu = { path = "vendor/gpui-ce/crates/gpui_wgpu" }
gpui_windows = { path = "vendor/gpui-ce/crates/gpui_windows" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
