[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
frame-updater = { path = "../../frame-updater" }
semver = "1.0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
